<resources>
    <string name="app_name">IntenDavid</string>
    <string name="move_activity">PINDAH ACTIVITY</string>
    <string name="move_with_data">PINDAH ACTIVITY DENGAN DATA</string>
    <string name="dial_number">PANGIL TELEFON</string>
    <string name="move_with_result">PINDAH AKTIVITY UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI ACTIVITY</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_blue">BIRU</string>
    <string name="_yellow">KUNING</string>
    <string name="_red">MERAH</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH ACTIVITY</string>
    <string name="leave">KELUAR</string>
    <string name="this_is_leave">INI KELUAR</string>
</resources>